--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 * {
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
 }
 
 body {
   margin: 20px;
   font-family: sans-serif;
+  font-size: 0;
+  background-color: whitesmoke;
 }
 
 .navig {
@@ -14,16 +14,19 @@ body {
   text-align: center;
 }
 
+ul {
+  padding: 0;
+}
+
 .nav-item {
   display: inline-block;
   list-style: none;
   border: olive 1px solid;
-  background-color: olivedrab;
+  background-color: #47986d;
   color: white;
   border: 1px solid midnightblue;
-  margin: 0 -2px;
-
   position: relative;
+  font-size: 16px;
 }
 
 .link {
@@ -35,24 +38,35 @@ body {
 }
 
 .nav-item:hover {
-  background-color: mediumspringgreen;
+  background-color: #3c805b;
+  transition: 0.3s;
 }
 
 .sub-nav-list {
   display: none;
-
   position: absolute;
   top: 100%;
-  left: 0px;
+  left: -1px;
   right: 0px;
 }
 
 .nav-item:hover > .sub-nav-list {
   display: block;
-  width: 100%;
+  width: 102%;
 }
 
 .sub-nav-item {
   display: block;
   text-align: center;
+}
+
+.sub-nav-item-women {
+  left: 160px;
+  top: -59px;
+  width: 100%;
+}
+
+.container {
+  font-size: 16px;
+  padding: 0 80px;
 }
