--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 body {
@@ -14,8 +16,8 @@ body {
   text-align: center;
 }
 
-ul {
-  padding: 0;
+.navig-list {
+  border: olive 1px solid;
 }
 
 .nav-item {
@@ -24,17 +26,8 @@ ul {
   border: olive 1px solid;
   background-color: #47986d;
   color: white;
-  border: 1px solid midnightblue;
   position: relative;
   font-size: 16px;
-}
-
-.link {
-  display: inline-block;
-  color: inherit;
-  text-decoration: none;
-  padding: 20px 40px;
-  width: 100%;
 }
 
 .nav-item:hover {
@@ -42,17 +35,22 @@ ul {
   transition: 0.3s;
 }
 
+.link {
+  display: inline-block;
+  color: inherit;
+  text-decoration: none;
+  padding: 20px 40px;
+}
+
 .sub-nav-list {
   display: none;
   position: absolute;
-  top: 100%;
-  left: -1px;
+  left: -2px;
   right: 0px;
 }
 
 .nav-item:hover > .sub-nav-list {
   display: block;
-  width: 102%;
 }
 
 .sub-nav-item {
@@ -69,4 +67,25 @@ ul {
 .container {
   font-size: 16px;
   padding: 0 80px;
+}
+
+@media screen and (max-width: 592px) {
+  .nav-list {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .nav-item {
+    width: 180px;
+  }
+
+  .sub-nav-list {
+    top: -1px;
+    left: 179px;
+  }
+
+  .sub-nav-item-women {
+    left: 0px;
+    top: 0px;
+  }
 }
